Implement pick your plans section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../practice-two/styles/main.css">
+    <link rel="stylesheet" href="../practice-two/styles/fonts.css">
     <link rel="stylesheet" href="../practice-two/styles/reset.css">
     <title>UpBox</title>
 </head>
 
 <body>
-    <div class="app">
-        <header class="header">
+    <div class="container">
+        <!-- Header -->
+        <header class=" header">
+
             <div class="nav">
                 <nav class="navbar__pc">
                     <div class="navbar__logo">
@@ -69,7 +72,27 @@
             </div>
 
         </header>
+        <!-- Pick your plans section -->
+        <section class="content__pick-your-plan">
+            <h2>Pick your plan </h2>
+            <div class="underline">
+                <img src="./images/pick_your_plan/underline.png" alt="underline" />
+            </div>
+            <div class="content__main-list">
+                <div class="main__list--item">
+                    <h3>Monthly</h3>
+                    <p>$18/mo</p>
+                    <button>find your box</button>
+                </div>
+                <div class="main__list--item">
+                    <h3>Yearly</h3>
+                    <p>$15/mo</p>
+                    <button>find your box</button>
+                </div>
 
+            </div>
+            <p>Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
+        </section>
 
 
 
