Update pick your plan section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -72,28 +72,32 @@
             </div>
 
         </header>
-        <!-- Pick your plans section -->
-        <section class="content__pick-your-plan">
-            <h2>Pick your plan </h2>
-            <div class="underline">
-                <img src="./images/pick_your_plan/underline.png" alt="underline" />
-            </div>
-            <div class="content__main-list">
-                <div class="main__list--item">
-                    <h3>Monthly</h3>
-                    <p>$18/mo</p>
-                    <button>find your box</button>
-                </div>
-                <div class="main__list--item">
-                    <h3>Yearly</h3>
-                    <p>$15/mo</p>
-                    <button>find your box</button>
+
+        <div class="container">
+            <!-- Pick your plans section -->
+            <section class="content__pick-your-plan">
+                <h2 class="sub-title">Pick your plan</h2>
+                <div class="underline">
+                    <img src="./images/pick_your_plan/underline.png" alt="underline" />
                 </div>
 
-            </div>
-            <p>Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
-        </section>
+                <div class="content__main-list">
+                    <div class="main__list--item">
+                        <h3>Monthly</h3>
+                        <p>$18/mo</p>
+                        <button>find your box</button>
+                    </div>
+                    <div class="main__list--item">
+                        <h3>Yearly</h3>
+                        <p>$15/mo</p>
+                        <button>find your box</button>
+                    </div>
 
+                </div>
+                <p class="description">Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
+            </section>
+
+        </div>
 
 
 
