--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -96,7 +96,42 @@
                 </div>
                 <p class="description">Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
             </section>
+            <!-- How it works section -->
+            <section class="content__how-it-works">
+                <h2 class="sub-title">How it works</h2>
+                <div class="underline">
+                    <img src="./images/pick_your_plan/underline.png" alt="underline" />
+                </div>
+                <div class="main__how-it-works">
+                    <img src="./images/how_it_works/group1.jpg" alt="group" />
+                    <div class="main__item-title">
+                        <h3>Setup your profile & preferences</h3>
+                        <p>Once you create an account, you can start to tell us your likes and dislikes so we can tailor
+                            the experience just for you.</p>
+                    </div>
+                </div>
+                <div class="main__how-it-works">
+                    <img src="./images/how_it_works/group2.jpg" alt="group" />
+                    <div class="main__item-title">
+                        <h3>Review your custom box</h3>
+                        <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
+                            approve it before we ship it to your house.</p>
+                    </div>
+                </div>
+                <div class="main__how-it-works">
+                    <img src="./images/how_it_works/group3.jpg" alt="group" />
+                    <div class="main__item-title">
+                        <h3>Try it on at home</h3>
+                        <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
+                            Upbox. Try it all on and send back whatever you’re not in love with.</p>
+                    </div>
 
+                </div>
+                <div class="try-it-for__btn">
+                    <button>try it for yourself</button>
+                </div>
+
+            </section>
         </div>
 
 
