Add html for social post section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -132,6 +132,31 @@
                 </div>
 
             </section>
+            <!-- social post -->
+            <section class="content__social-post">
+                <h2>Social Posts</h2>
+                <section class="list__social-post">
+                    <article class="main__social-post">
+                        <img src="./images/social_post/girl.jpg" alt="girl" />
+                        <p>How to rock the lip look that turns heads</p>
+                    </article>
+                    <article class="main__social-post">
+                        <img src="./images/social_post/chest.jpg" alt="girl" />
+                        <p>Find the perfect shade for the season</p>
+                    </article>
+                    <article class="main__social-post">
+                        <img src="./images/social_post/makeup_brushes.jpg" alt="girl" />
+                        <p>The 5 eye shadow secrets you never knew</p>
+                    </article>
+                    <article class="main__social-post">
+                        <img src="./images/social_post/grey_hair.jpg" alt="girl" />
+                        <p>The pro-tips for at home hair dying</p>
+                    </article>
+                    <article class="follow-btn">
+                        <button>follow us instagram</button>
+                    </article>
+                </section>
+            </section>
         </div>
 
 
