--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -157,6 +157,66 @@
                     </article>
                 </section>
             </section>
+            <!-- footer -->
+            <footer class="footer">
+                <section class="footer-container">
+                    <article class="footer-container__top-side">
+                        <img class="top-side__logo" src="./images/footer/logo_footer.png" alt="logo" />
+                        <article class="icon">
+                            <img src="./images/footer/instagram.png" />
+                            <img src="./images/footer/facebook.png" />
+                            <img src="./images/footer/twitter.png" />
+                            <img src="./images/footer/snapchat.png" />
+                        </article>
+                    </article>
+                    <article class="footer-container__center-site">
+                        <article class="center-site__upbox">
+                            <h3>upbox</h3>
+                            <a href="javascript:void(0)">upbox box bag</a>
+                            <a href="javascript:void(0)">upbox box platinum</a>
+                            <a href="javascript:void(0)">up box vip</a>
+                            <a href="javascript:void(0)">deals</a>
+                            <a href="javascript:void(0)">seasional item</a>
+                            <a href="javascript:void(0)">upbox promise</a>
+                        </article>
+                        <article class="center-site__upbox">
+                            <h3>Product</h3>
+                            <a href="javascript:void(0)">get the app</a>
+                            <a href="javascript:void(0)">loyalty program</a>
+                            <a href="javascript:void(0)">affiliates</a>
+                            <a href="javascript:void(0)">press</a>
+
+                        </article>
+                        <article class="center-site__upbox">
+                            <h3>Find Us On</h3>
+                            <a href="javascript:void(0)">Instagram</a>
+                            <a href="javascript:void(0)">Facebook</a>
+                            <a href="javascript:void(0)">TikTok</a>
+                            <a href="javascript:void(0)">SnapChat</a>
+                            <a href="javascript:void(0)">Twitter</a>
+                        </article>
+                        <article class="center-site__upbox">
+                            <h3>Help</h3>
+                            <a href="javascript:void(0)">Returns</a>
+                            <a href="javascript:void(0)">FAQ</a>
+                            <a href="javascript:void(0)">Contact</a>
+                            <a href="javascript:void(0)">Community</a>
+
+                        </article>
+                    </article>
+                    <article class="footer-container__bottom-side">
+                        <article class="bottom-side__title">
+                            <p>Terms</p>
+                            <p>Privacy Policy</p>
+                        </article>
+                        <article class="bottom-side__desc">
+                            <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
+                                personal and commercial use.</p>
+                        </article>
+                    </article>
+                </section>
+
+            </footer>
         </div>
 
 
