Update html for how it work section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -103,15 +103,21 @@
                     <img src="./images/pick_your_plan/underline.png" alt="underline" />
                 </div>
                 <div class="main__how-it-works">
-                    <img src="./images/how_it_works/group1.jpg" alt="group" />
+                    <div class="main__how-it-works--img">
+                        <img src="./images/how_it_works/group1.jpg" alt="group" />
+                    </div>
                     <div class="main__item-title">
                         <h3>Setup your profile & preferences</h3>
-                        <p>Once you create an account, you can start to tell us your likes and dislikes so we can tailor
+                        <p>Once you create an account, you can start to tell us your likes and dislikes so we can
+                            tailor
                             the experience just for you.</p>
                     </div>
+
                 </div>
                 <div class="main__how-it-works">
-                    <img src="./images/how_it_works/group2.jpg" alt="group" />
+                    <div class="main__how-it-works--img">
+                        <img src="./images/how_it_works/group2.jpg" alt="group" />
+                    </div>
                     <div class="main__item-title">
                         <h3>Review your custom box</h3>
                         <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
@@ -119,7 +125,9 @@
                     </div>
                 </div>
                 <div class="main__how-it-works">
-                    <img src="./images/how_it_works/group3.jpg" alt="group" />
+                    <div class="main__how-it-works--img">
+                        <img src="./images/how_it_works/group3.jpg" alt="group" />
+                    </div>
                     <div class="main__item-title">
                         <h3>Try it on at home</h3>
                         <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
