Edit photo link

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="container">
         <!-- Header -->
-        <header class=" header">
+        <header class="header">
 
             <div class="nav">
                 <nav class="navbar__pc">
                     <div class="navbar__logo">
-                        <img src="../practice-two/images/header/logo.png" alt="logo" />
+                        <img src="../practice-two/assets/images/icons/logo.png" alt="logo" />
                     </div>
                     <ul class="navbar__list">
                         <li class="navbar__item"><a href="">This month</a></li>
@@ -37,10 +37,10 @@
                 </nav>
                 <div class="banner">
                     <div class="navbar__mobile-logo">
-                        <img src="../practice-two/images/header/logo.png" alt="logo" />
+                        <img src="./assets/images/icons/logo.png" alt="logo" />
                     </div>
                     <label for="nav-mobile-input" class="nav__bars-btn">
-                        <img src="./images/header/bars.png" />
+                        <img src="./assets/images/icons/bars.png" />
                     </label>
                 </div>
 
@@ -67,7 +67,7 @@
                     Our stylists curate the latest trends and send them directly to your door every month.</p>
                 <button type="button" class="btn nav_btn-content">sign up ></button>
                 <div class="box__image">
-                    <img src="./images/header/box.jpg" />
+                    <img src="./assets/images/photos/box.jpg" alt="box" />
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
             <section class="content__pick-your-plan">
                 <h2 class="sub-title">Pick your plan</h2>
                 <div class="underline">
-                    <img src="./images/pick_your_plan/underline.png" alt="underline" />
+                    <img src="./assets/images/photos/underline.jpg" alt="underline" />
                 </div>
 
                 <div class="content__main-list">
@@ -100,11 +100,11 @@
             <section class="content__how-it-works">
                 <h2 class="sub-title">How it works</h2>
                 <div class="underline">
-                    <img src="./images/pick_your_plan/underline.png" alt="underline" />
+                    <img src="./assets/images/photos/underline.jpg" alt="underline" />
                 </div>
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./images/how_it_works/group1.jpg" alt="group" />
+                        <img src="./assets/images/photos/girl_with_phone.jpg" alt="group" />
                     </div>
                     <div class="main__item-title">
                         <h3>Setup your profile & preferences</h3>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./images/how_it_works/group2.jpg" alt="group" />
+                        <img src="./assets/images/photos/pink_box.jpg" alt="group" />
                     </div>
                     <div class="main__item-title">
                         <h3>Review your custom box</h3>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./images/how_it_works/group3.jpg" alt="group" />
+                        <img src="./assets/images/photos/girl_makeup.jpg" alt="group" />
                     </div>
                     <div class="main__item-title">
                         <h3>Try it on at home</h3>
@@ -145,19 +145,19 @@
                 <h2>Social Posts</h2>
                 <section class="list__social-post">
                     <article class="main__social-post">
-                        <img src="./images/social_post/girl.jpg" alt="girl" />
+                        <img src="./assets/images/photos/girl.jpg" alt="girl" />
                         <p>How to rock the lip look that turns heads</p>
                     </article>
                     <article class="main__social-post">
-                        <img src="./images/social_post/chest.jpg" alt="girl" />
+                        <img src="./assets/images/photos/chest.jpg" alt="girl" />
                         <p>Find the perfect shade for the season</p>
                     </article>
                     <article class="main__social-post">
-                        <img src="./images/social_post/makeup_brushes.jpg" alt="girl" />
+                        <img src="./assets/images/photos/makeup_brushes.jpg" alt="girl" />
                         <p>The 5 eye shadow secrets you never knew</p>
                     </article>
                     <article class="main__social-post">
-                        <img src="./images/social_post/grey_hair.jpg" alt="girl" />
+                        <img src="./assets/images/photos/grey_hair.jpg" alt="girl" />
                         <p>The pro-tips for at home hair dying</p>
                     </article>
                     <article class="follow-btn">
@@ -169,12 +169,12 @@
             <footer class="footer">
                 <section class="footer-container">
                     <article class="footer-container__top-side">
-                        <img class="top-side__logo" src="./images/footer/logo_footer.png" alt="logo" />
+                        <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
                         <article class="icon">
-                            <img src="./images/footer/instagram.png" />
-                            <img src="./images/footer/facebook.png" />
-                            <img src="./images/footer/twitter.png" />
-                            <img src="./images/footer/snapchat.png" />
+                            <img src="./assets/images/icons/instagram.png" alt="icon" />
+                            <img src="./assets/images/icons/facebook.png" alt="icon" />
+                            <img src="./assets/images/icons/twitter.png" alt="icon" />
+                            <img src="./assets/images/icons/snapchat.png" alt="icon" />
                         </article>
                     </article>
                     <article class="footer-container__center-site">
