Add button for header section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -32,6 +32,10 @@
                     <li class="navbar__list-item"><a href="">bath</a></li>
                     <li class="navbar__list-item"><a href="">sale</a></li>
                 </ul>
+                <div class="navbar__btn">
+                    <button>login ></button>
+
+                </div>
             </div>
             <div class="header__content">
                 <h2>Look good without leaving your house.</h2>
