--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -24,17 +24,17 @@
                         <img src="./assets/images/icons/bars.png" />
                     </div>
                 </div>
-
-                <ul class="navbar__list">
-                    <li class="navbar__list-item"><a href="">This month</a></li>
-                    <li class="navbar__list-item"><a href="">skin</a></li>
-                    <li class="navbar__list-item"><a href="">hair</a></li>
-                    <li class="navbar__list-item"><a href="">bath</a></li>
-                    <li class="navbar__list-item"><a href="">sale</a></li>
-                </ul>
-                <div class="navbar__btn">
-                    <button>login ></button>
-
+                <div class="navbar__menu">
+                    <ul class="navbar__list">
+                        <li class="navbar__list-item"><a href="">This month</a></li>
+                        <li class="navbar__list-item"><a href="">skin</a></li>
+                        <li class="navbar__list-item"><a href="">hair</a></li>
+                        <li class="navbar__list-item"><a href="">bath</a></li>
+                        <li class="navbar__list-item"><a href="">sale</a></li>
+                    </ul>
+                    <div class="navbar__btn">
+                        <button>login ></button>
+                    </div>
                 </div>
             </div>
             <div class="header__content">
