Update html for How it works section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -53,166 +53,169 @@
                     <img src="./assets/images/photos/box.jpg" alt="box" />
                 </div>
             </div>
-    </div>
-
-    </header>
 
 
-    <!-- Pick your plans section -->
-    <section class="content__pick-your-plan">
-        <h2 class="sub-title">Pick your plan</h2>
-        <div class="underline">
-            <img src="./assets/images/photos/underline.jpg" alt="underline" />
-        </div>
+        </header>
 
-        <div class="content__main-list">
-            <div class="main__list--item">
-                <h3>Monthly</h3>
-                <p>$18/mo</p>
-                <button>find your box</button>
-            </div>
-            <div class="main__list--item">
-                <h3>Yearly</h3>
-                <p>$15/mo</p>
-                <button>find your box</button>
+
+        <!-- Pick your plans section -->
+        <section class="content__pick-your-plan">
+            <h2 class="sub-title">Pick your plan</h2>
+            <div class="underline">
+                <img src="./assets/images/photos/underline.jpg" alt="underline" />
             </div>
 
-        </div>
-        <p class="description">Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
-    </section>
-    <!-- How it works section -->
-    <section class="content__how-it-works">
-        <h2 class="sub-title">How it works</h2>
-        <div class="underline">
-            <img src="./assets/images/photos/underline.jpg" alt="underline" />
-        </div>
-        <div class="main__how-it-works">
-            <div class="main__how-it-works--img">
-                <img src="./assets/images/photos/girl_with_phone.jpg" alt="group" />
-            </div>
-            <div class="main__how-it-works--title">
-                <h3>Setup your profile & preferences</h3>
-                <p>Once you create an account, you can start to tell us your likes and dislikes so we can
-                    tailor the experience just for you.</p>
-            </div>
+            <div class="content__main-list">
+                <div class="main__list--item">
+                    <h3>Monthly</h3>
+                    <p>$18/mo</p>
+                    <button>find your box</button>
+                </div>
+                <div class="main__list--item">
+                    <h3>Yearly</h3>
+                    <p>$15/mo</p>
+                    <button>find your box</button>
+                </div>
 
-        </div>
-        <div class="main__how-it-works">
-            <div class="main__how-it-works--img">
-                <img src="./assets/images/photos/pink_box.jpg" alt="group" />
             </div>
-            <div class="main__how-it-works--title">
-                <h3>Review your custom box</h3>
-                <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
-                    approve it before we ship it to your house.</p>
+            <p class="description">Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
+        </section>
+        <!-- How it works section -->
+        <section class="content__how-it-works">
+            <h2 class="sub-title">How it works</h2>
+            <div class="underline">
+                <img src="./assets/images/photos/underline.jpg" alt="underline" />
             </div>
-        </div>
-        <div class="main__how-it-works">
-            <div class="main__how-it-works--img">
-                <img src="./assets/images/photos/girl_makeup.jpg" alt="group" />
-            </div>
-            <div class="main__how-it-works--title">
-                <h3>Try it on at home</h3>
-                <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
-                    Upbox. Try it all on and send back whatever you’re not in love with.</p>
-            </div>
+            <div class="content__main">
+                <div class="main__how-it-works">
+                    <div class="main__how-it-works--img">
+                        <img src="./assets/images/photos/girl_with_phone.jpg" alt="group" />
+                    </div>
+                    <div class="main__how-it-works--title">
+                        <h3>Setup your profile & preferences</h3>
+                        <p>Once you create an account, you can start to tell us your likes and dislikes so we can
+                            tailor the experience just for you.</p>
+                    </div>
 
-        </div>
-        <div class="how-it-works__btn">
-            <button>try it for yourself</button>
-        </div>
+                </div>
+                <div class="main__how-it-works">
+                    <div class="main__how-it-works--img">
+                        <img src="./assets/images/photos/pink_box.jpg" alt="group" />
+                    </div>
+                    <div class="main__how-it-works--title">
+                        <h3>Review your custom box</h3>
+                        <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
+                            approve it before we ship it to your house.</p>
+                    </div>
+                </div>
+                <div class="main__how-it-works">
+                    <div class="main__how-it-works--img">
+                        <img src="./assets/images/photos/girl_makeup.jpg" alt="group" />
+                    </div>
+                    <div class="main__how-it-works--title">
+                        <h3>Try it on at home</h3>
+                        <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
+                            Upbox. Try it all on and send back whatever you’re not in love with.</p>
+                    </div>
 
-    </section>
-    <!-- social post -->
-    <section class="content__social-post">
-        <h2>Social Posts</h2>
-        <section class="list__social-post">
-            <article class="main__social-post">
-                <img src="./assets/images/photos/girl.jpg" alt="girl" />
-                <p>How to rock the lip look that turns heads</p>
-            </article>
-            <article class="main__social-post">
-                <img src="./assets/images/photos/chest.jpg" alt="girl" />
-                <p>Find the perfect shade for the season</p>
-            </article>
-            <article class="main__social-post">
-                <img src="./assets/images/photos/makeup_brushes.jpg" alt="girl" />
-                <p>The 5 eye shadow secrets you never knew</p>
-            </article>
-            <article class="main__social-post">
-                <img src="./assets/images/photos/grey_hair.jpg" alt="girl" />
-                <p>The pro-tips for at home hair dying</p>
-            </article>
+                </div>
+                <div class="how-it-works__btn">
+                    <button>try it for yourself</button>
+                </div>
+            </div>
+        </section>
+        <!-- social post -->
+        <section class="content__social-post">
+            <h2>Social Posts</h2>
+            <section class="list__social-post">
+                <article class="main__social-post">
+                    <img src="./assets/images/photos/girl.jpg" alt="girl" />
+                    <p>How to rock the lip look that turns heads</p>
+                </article>
+                <article class="main__social-post">
+                    <img src="./assets/images/photos/chest.jpg" alt="girl" />
+                    <p>Find the perfect shade for the season</p>
+                </article>
+                <article class="main__social-post">
+                    <img src="./assets/images/photos/makeup_brushes.jpg" alt="girl" />
+                    <p>The 5 eye shadow secrets you never knew</p>
+                </article>
+                <article class="main__social-post">
+                    <img src="./assets/images/photos/grey_hair.jpg" alt="girl" />
+                    <p>The pro-tips for at home hair dying</p>
+                </article>
+
+            </section>
             <article class="social-post__btn">
                 <button>follow us instagram</button>
             </article>
         </section>
-    </section>
-    <!-- footer -->
-    <footer class="footer">
-        <section class="footer-container">
-            <article class="footer-container__top-side">
-                <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
-                <article class="icon">
-                    <img src="./assets/images/icons/instagram.png" alt="icon" />
-                    <img src="./assets/images/icons/facebook.png" alt="icon" />
-                    <img src="./assets/images/icons/twitter.png" alt="icon" />
-                    <img src="./assets/images/icons/snapchat.png" alt="icon" />
+        <!-- footer -->
+        <footer class="footer">
+            <section class="footer-container">
+                <article class="footer-container__top-side">
+                    <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
+                    <article class="top-side__icon">
+                        <img src="./assets/images/icons/instagram.png" alt="icon" />
+                        <img src="./assets/images/icons/facebook.png" alt="icon" />
+                        <img src="./assets/images/icons/twitter.png" alt="icon" />
+                        <img src="./assets/images/icons/snapchat.png" alt="icon" />
+                    </article>
                 </article>
-            </article>
-            <article class="footer-container__center-site">
-                <article class="center-site__upbox">
-                    <h3>upbox</h3>
-                    <a href="javascript:void(0)">upbox box bag</a>
-                    <a href="javascript:void(0)">upbox box platinum</a>
-                    <a href="javascript:void(0)">up box vip</a>
-                    <a href="javascript:void(0)">deals</a>
-                    <a href="javascript:void(0)">seasional item</a>
-                    <a href="javascript:void(0)">upbox promise</a>
-                </article>
-                <article class="center-site__upbox">
-                    <h3>Product</h3>
-                    <a href="javascript:void(0)">get the app</a>
-                    <a href="javascript:void(0)">loyalty program</a>
-                    <a href="javascript:void(0)">affiliates</a>
-                    <a href="javascript:void(0)">press</a>
+                <article class="footer-container__center-site">
+                    <article class="center-site__upbox">
+                        <h3>upbox</h3>
+                        <a href="javascript:void(0)">upbox box bag</a>
+                        <a href="javascript:void(0)">upbox box platinum</a>
+                        <a href="javascript:void(0)">up box vip</a>
+                        <a href="javascript:void(0)">deals</a>
+                        <a href="javascript:void(0)">seasional item</a>
+                        <a href="javascript:void(0)">upbox promise</a>
+                    </article>
+                    <article class="center-site__upbox">
+                        <h3>Product</h3>
+                        <a href="javascript:void(0)">get the app</a>
+                        <a href="javascript:void(0)">loyalty program</a>
+                        <a href="javascript:void(0)">affiliates</a>
+                        <a href="javascript:void(0)">press</a>
 
-                </article>
-                <article class="center-site__upbox">
-                    <h3>Find Us On</h3>
-                    <a href="javascript:void(0)">Instagram</a>
-                    <a href="javascript:void(0)">Facebook</a>
-                    <a href="javascript:void(0)">TikTok</a>
-                    <a href="javascript:void(0)">SnapChat</a>
-                    <a href="javascript:void(0)">Twitter</a>
-                </article>
-                <article class="center-site__upbox">
-                    <h3>Help</h3>
-                    <a href="javascript:void(0)">Returns</a>
-                    <a href="javascript:void(0)">FAQ</a>
-                    <a href="javascript:void(0)">Contact</a>
-                    <a href="javascript:void(0)">Community</a>
+                    </article>
+                    <article class="center-site__upbox">
+                        <h3>Find Us On</h3>
+                        <a href="javascript:void(0)">Instagram</a>
+                        <a href="javascript:void(0)">Facebook</a>
+                        <a href="javascript:void(0)">TikTok</a>
+                        <a href="javascript:void(0)">SnapChat</a>
+                        <a href="javascript:void(0)">Twitter</a>
+                    </article>
+                    <article class="center-site__upbox">
+                        <h3>Help</h3>
+                        <a href="javascript:void(0)">Returns</a>
+                        <a href="javascript:void(0)">FAQ</a>
+                        <a href="javascript:void(0)">Contact</a>
+                        <a href="javascript:void(0)">Community</a>
 
+                    </article>
                 </article>
-            </article>
-            <article class="footer-container__bottom-side">
-                <article class="bottom-side__title">
-                    <p>Terms</p>
-                    <p>Privacy Policy</p>
+                <article class="footer-container__bottom-side">
+                    <article class="bottom-side__title">
+                        <p>Terms</p>
+                        <p>Privacy Policy</p>
+                    </article>
+                    <article class="bottom-side__desc">
+                        <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
+                            personal and commercial use.</p>
+                    </article>
                 </article>
-                <article class="bottom-side__desc">
-                    <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
-                        personal and commercial use.</p>
-                </article>
-            </article>
-        </section>
+            </section>
 
-    </footer>
-
-
-
+        </footer>
 
     </div>
+
 </body>
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/html-inspector/0.8.2/html-inspector.js"></script>
+<script src="./javascripts/index.js"></script>
 
 </html>
